%% title: ERD 07 - Reference / Master Data
%% source: com.softinter.sicapi.entity.db.{DbCountry,DbProvince,DbDistrict,DbSubDistrict,DbTitle,DbParameter,DbMailTemplate,DbMailConfig,DbMailQueue}
%% NOTE: db_title (person title/prefix lookup) and db_parameter (generic module parameter lookup) have NO FK columns
%%       to/from anything - omitted here as standalone lookup tables. db_title columns: id PK, person_type,
%%       prefix/suffix_short_name_en/local, prefix/suffix_name_en/local, sort_order, is_active, + audit columns.
%%       db_parameter columns: id PK, module_code, parameter_code, parameter_value, parameter_name_en/local,
%%       is_active, sort_order, + audit columns.
erDiagram
%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#ffffff", "primaryBorderColor": "#000000", "primaryTextColor": "#000000", "lineColor": "#000000", "secondaryColor": "#ffffff", "tertiaryColor": "#ffffff"}, "er": {"diagramPadding": 8, "entityPadding": 12, "minEntityWidth": 90, "minEntityHeight": 40, "fontSize": 22}}}%%
    direction LR

    DB_COUNTRY {
        uuid id
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
        varchar country_code
        varchar iso_code
        varchar country_name_en
        varchar country_name_local
        boolean support_local_address
        boolean is_active
    }

    DB_PROVINCE {
        uuid id
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
        uuid country_id
        varchar province_code
        varchar province_name_en
        varchar province_name_local
        boolean is_active
    }

    DB_DISTRICT {
        uuid id
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
        uuid province_id
        varchar district_code
        varchar district_name_en
        varchar district_name_local
        boolean is_active
    }

    DB_SUB_DISTRICT {
        uuid id
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
        uuid district_id
        varchar sub_district_code
        varchar sub_district_name_en
        varchar sub_district_name_local
        varchar zip_code
        bigint latitude
        bigint longitude
        boolean is_active
    }

    DB_MAIL_TEMPLATE {
        uuid id
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
        varchar template_code
        varchar template_name
        varchar subject_en
        varchar subject_local
        text content_en
        text content_local
        boolean is_html
        boolean is_active
        varchar variables
    }

    DB_MAIL_CONFIG {
        uuid id
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
        varchar config_name
        varchar smtp_server
        int smtp_port
        varchar email_from
        varchar username
        varchar password
        boolean enable_ssl
        int sort_order
        boolean is_active
        int max_retry
        varchar description
    }

    DB_MAIL_QUEUE {
        uuid id
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
        uuid template_id
        varchar recipient_email
        varchar recipient_name
        text body_data
        varchar status
        int retry_count
        varchar error_message
        timestamp scheduled_at
        timestamp sent_at
        timestamp next_retry_at
        uuid used_config_id
        boolean use_english
        uuid db_mail_config_id
    }

    DB_COUNTRY  ||--o{ DB_PROVINCE     : "has (country_id FK)"
    DB_PROVINCE ||--o{ DB_DISTRICT     : "has (province_id FK)"
    DB_DISTRICT ||--o{ DB_SUB_DISTRICT : "has (district_id FK)"
    DB_MAIL_TEMPLATE ||--o{ DB_MAIL_QUEUE : "queues (template_id FK)"
    DB_MAIL_CONFIG   ||--o{ DB_MAIL_QUEUE : "sends via (db_mail_config_id FK)"
